Work with tmiTest.js Rest may not be viable.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "got": "^12.5.3",
+    "tmi.js": "^1.8.5",
     "twitch-js": "^2.0.0-beta.45"
   }
 }
